Make DesktopNativeWidgetAura::Minimize clear root view event handlers.

This fixes the issue with the root view holding onto a gesture handler on window minimize
which sends the event to the previous gesture handler.

Bug: 912514
Change-Id: I25775378197fb56cca6ad1c8232e792d83720ba8
Reviewed-on: https://chromium-review.googlesource.com/c/1388170
Commit-Queue: David Bienvenu <davidbienvenu@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622842}
Former-commit-id: a82f115f1eb907a8ed70bd87f82a45951ec62d26